# lightbringer

./: .gitignore  Cargo.toml  espflash.toml  partitions.csv
.cargo/: config.toml
lightbringer/: Cargo.toml
lightbringer/src/: main.rs  web_app.rs
lightlib/: Cargo.toml
lightlib/resources/: data-format.md  index.html
lightlib/src/: http.rs  lib.rs  light_state.rs  partitions.rs  time.rs  value_synchronizer.rs  web_app.rs  wifi.rs
resources/: data-format.md  index.html  ota.html  style.css
src/: color_storage.rs  http.rs  leds.rs  main.rs  make_static.rs  ota.rs  partitions.rs  rotating_logger.rs  value_synchronizer.rs  web_app.rs  wifi.rs
src/ota/: crc.rs  errors.rs  mod.rs  ota_data.rs  ota_data_structs.rs  partition.rs
wakebringer/: Cargo.toml
wakebringer/src/: main.rs
