[package]
name = "lightbringer"
version = "0.1.0"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>", "Anne Stijns <anstijns@gmail.com>"]
edition = "2021"

[dependencies]
## ESP HAL
esp-hal = { version = "0.20", features = ["esp32c3", "async"] }
esp-hal-embassy = { version = "0.3", features = ["esp32c3", "integrated-timers"] }
esp-println = { version = "0.11", features = ["esp32c3", "log"] }
esp-backtrace = {version = "0.14", features = ["esp32c3", "panic-handler", "println"]}
esp-storage = { version = "0.3", features = ["esp32c3", "nor-flash"] }
embedded-storage = "0.3"
embedded-hal-async = "1.0"
embedded-io-async = "0.6"
embassy-futures = "0.1"

## Embassy
embassy-executor   = { version = "0.6", features = ["nightly"] }
embassy-time   = { version = "0.3" }
embassy-sync = "0.6"

# Wifi
esp-wifi = { version = "0.9", features = [
    "esp32c3",
    "wifi",
    "embassy-net"
] }
heapless = { version = "0.8.0", default-features = false }
embassy-net-driver = { version = "0.2" }
embassy-net = { version = "0.4.0", features = [
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
static_cell = { version = "2.1.0" }

# Other
picoserve = { version = "0.12", features = ["embassy"] }
log = "0.4"
ringbuffer = {  version  = "0.15", default-features = false }
build-time = "0.1"
esp-ota-nostd = {path = "../esp-ota-nostd"}

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy" }
embassy-time = { git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy" }

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
