[workspace]
resolver = "3"
members = ["lightbringer", "lightlib", "wakebringer"]

[patch.crates-io]
picoserve = { git = "https://github.com/oleid/picoserve.git", branch = "loosen_embassy_version" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false