[package]
name = "lightlib"
version = "0.1.0"
authors = ["Jonathan Brouwer <jonathantbrouwer@gmail.com>", "Anne Stijns <anstijns@gmail.com>"]
edition = "2021"

[dependencies]
## ESP HAL
esp-hal = { version = "1.0.0-rc.0", features = ["esp32c3", "unstable"] }
esp-println = { version = "0.15", features = ["esp32c3", "log-04"] }
esp-storage = { version = "0.4", features = ["esp32c3", "nor-flash"] }
esp-partition-table = "0.1.3"
embedded-storage = "0.3"
embedded-io-async = "0.6"
embassy-futures = "0.1"

## Embassy
embassy-executor   = { version = "0.7", features = ["nightly"] }
embassy-time   = { version = "0.5.0" }
embassy-sync = "0.6"

# Wifi
esp-wifi = { version = "0.15", features = [
    "esp32c3",
    "wifi",
] }
heapless = { version = "0.8", default-features = false }
embassy-net = { version = "0.7.1", features = [
    "tcp",
    "dhcpv4",
    "medium-ethernet",
] }
static_cell = { version = "2.1" }

# Other
picoserve = { version = "0.16.0", features = ["embassy"] }
log = "0.4"
ringbuffer = {  version  = "0.15", default-features = false }
esp-ota-nostd = { path = "../../esp-ota-nostd", version = "0.1"}
